fix(backtotop): improve contrast

--- a/src/components/backToTop/style.scss
+++ b/src/components/backToTop/style.scss
@@ -41,6 +41,6 @@
 		z-index: -1;
 		width: 100%;
 		height: 100%;
-		fill: color.scale($color_base_primary, $lightness: 25%);
+		fill: color.scale($color_base_primary, $lightness: 60%);
 	}
 }
